<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aasavari.owleducation.MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/owl_tutor"
        android:id="@+id/owltutor"
        android:scaleType="fitStart"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:fontFamily="cursive"
        android:paddingLeft="120dp"
        android:paddingTop="40dp"
        android:paddingRight="80dp"
        android:id="@+id/label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/desc_title"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@id/owltutor"
        android:id="@+id/desc_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/description"
        android:layout_below="@id/desc_title"
        android:textColor="@android:color/holo_blue_dark"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/loc_title"
        android:textColor="@android:color/holo_orange_dark"
        android:id="@+id/loc_title"
        android:layout_below="@id/description"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/address"
        android:layout_below="@id/loc_title"
        android:padding="5dp"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_title"
        android:textColor="@android:color/holo_orange_dark"
        android:id="@+id/contact_title"
        android:layout_below="@id/address"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"
        android:id="@+id/contact"
        android:layout_below="@id/contact_title"
        android:padding="5dp"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_title"
        android:textColor="@android:color/holo_orange_dark"
        android:id="@+id/hours_title"
        android:layout_below="@id/contact"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:id="@+id/hours"
        android:layout_below="@id/hours_title"
        android:padding="5dp"
        android:textColor="@android:color/holo_blue_dark"/>

</RelativeLayout>
</ScrollView>